--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "ajv-cli": "^5.0.0",
     "ajv-formats": "^2.1.1",
+    "js-yaml": "^4.1.0",
     "mustache": "^4.2.0"
   },
   "scripts": {
