--- a/data.yml
+++ b/data.yml
@@ -71,6 +71,9 @@ licensors:
 - name: Handsontable
   url: https://handsontable.com/pricing
 
+- name: HashiCorp
+  url: https://www.hashicorp.com/license-faq
+
 - name: Highsoft
   url: https://highsoft.com
   products:
