--- a/data.yml
+++ b/data.yml
@@ -132,6 +132,9 @@ licensors:
 - name: Magnolia CMS
   url: https://www.magnolia-cms.com/
 
+- name: MinIO
+  url: https://min.io/compliance
+
 - name: Mergely
   url: http://mergely.com/license
 
